--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-boilerplate",
   "version": "1.0.0",
-  "description": "for paiza",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index.js",
